--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ts",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js",
+    "start": "node src/server.ts",
     "dev": "nodemon src/server.ts",
     "eslint": "eslint . --fix",
     "fix": "npm run format && npm run lint",
