--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/server.ts",
+    "start": "node .",
     "dev": "nodemon src/server.ts",
     "eslint": "eslint . --fix",
     "fix": "npm run format && npm run lint",
