--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,7 +98,7 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "outDir": "./dist",
+    "outDir": "./build",
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   }
 }
